удалил ссылку на ютуб

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
          <div class="container flex noborders video">
             <div id="vid02" style="padding-top:56.17021276595745%;display:none"
                class="w-embed-youtubevideo youtube02 w-node-18668da72d89-b7aaf411"><iframe
-                  src="https://www.youtube-nocookie.com/embed/5rfYLzGuSXI?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
+                  src="#"
                   frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
                   allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
          </div>
